<resources>
    <string name="app_name">Smart Guard</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="add_hub_heading">Hubs are the central base stations of the SmartGuard suite.\nTo register a hub, please do the following:</string>
    <string name="add_hub_point1">Insert an active SIM card that can send/receive SMS (with sufficient credit) into the Hub</string>
    <string name="add_hub_point2"><![CDATA[Power on the Hub & let it boot]]></string>
    <string name="add_hub_point_3">Add the Phone No. of the siM card in the Hub below. and press the \'Add Hub button</string>
    <string name="btn_add_hub">ADD HUB</string>
    <string name="_91_xxxx_xx_xxxx">+91 XXXX XX XXXX</string>
    <string name="hub_sim">HUB SIM Phone No</string>
    <string name="hub_serial_no">HUB Serial No</string>
    <string name="verifying">VERIFYING</string>
    <string name="smartguard">SMARTGUARD</string>
    <string name="armed">ARMED</string>
    <string name="disarmed">DISARMED</string>
    <string name="tap_to_select_a_hub">Tap to select a Hub</string>
    <string name="name">Name</string>
    <string name="hub_name_here">Eg. Home,Office</string>
    <string name="continue_to_add_sensors">CONTINUE TO ADD SENSORS</string>
    <string name="add_hub_name_desc">This is a short name you can assign to this specific Hub to let you know where this device is currently locate.</string>
    <string name="manual_siren_control">Manual Siren Control</string>
    <string name="silence">Silence</string>
    <string name="ring">Ring</string>
    <string name="device_arming">Device Arming</string>
    <string name="arm">Arm</string>
    <string name="disarm">Disarm</string>
    <string name="press_and_hold_2s_to_send_an_sos">Press and Hold 2s to send an SOS</string>
    <string name="activity_history">Activity History</string>
    <string name="are_you_sure">ARE YOU SURE?</string>
    <string name="desc_format_hub1">This cannot be undone. Once the device has been formatted, all connected sensors will be disconnected.</string>
    <string name="yes_i_m_sure">YES, I\'M SURE</string>
    <string name="no_go_back">NO, GO BACK</string>
    <string name="desc_hub_format2">This can take up to few minutes. You\'ll be notified via SMS once the device has been formatted.</string>
    <string name="formatting">FORMATTING</string>
    <string name="get_started">Get Started</string>
    <string name="on_boarding_title1">Welcome to your SmartGuard Hub!</string>
    <string name="onboard_title_1">Welcome to your SmartGuard Hub!</string>
    <string name="onboard_title_2">Get Started by adding devices here</string>
    <string name="onboard_title_3">Add others to your hubs easily</string>
    <string name="onboard_title_4">Get help whenever you need it whenever you need it</string>
    <string name="onboard_desc_1">The SmartGuard suite is controlled from the central \'Hub. Be sure to use an active SIM card to communicate with the Hub!</string>
    <string name="onboard_desc_2">Adding a new device to expand your home security is as easy as 3 taps!</string>
    <string name="onboard_desc_4">Help is available at every single step, just tap the \'Help\' icon on the top right to get quick answers!</string>
    <string name="onboard_desc_3">Have the smart guard hub automatically notify other people when any sensor is triggered!</string>
    <string name="desc1_secandory_user">Registered users will be notified via SMS and/or\nPhone call along with your number when the\nSmartHub alarm is triggered.</string>
    <string name="desc2_secandory_user">Registered users can manually trigger the SmartHub\nAlarm through the App.</string>
    <string name="confirm_number">CONFIRM NUMBER</string>
    <string name="choose_a_sensor_to_configure">Choose a sensor to configure</string>
    <string name="add_sensor_desc1">Pick the sensor you would like to configure, and switch it on. Make sure other sensors are off.</string>
    <string name="add_sensor_desc_3"><![CDATA[Tap the \'Scan & Add\' button on the next screen, and the Hub will automatically detect and pair with the sensor in range.]]></string>
    <string name="scan_amp_add_the_sensor"><![CDATA[Scan & Add the Sensor]]></string>
    <string name="add_sensor_desc_2">Decide what name to assign to this sensor, and what custom SMS you\'d like to receive when this specific sensor is triggered.</string>
    <string name="set_a_custom_name_amp_message"><![CDATA[Set a Custom Name & Message]]></string>
    <string name="add_sensor_name_desc">This custom name will be used to identify the sensor as registered through the app.</string>
    <string name="warning_an_alarm_has_been_triggered_from_sensor_id_1a353_53v_vh4g_n_nplease_return_home_immediately_you_can_switch_off_the_alarm_from_the_app">Warning! An alarm has been triggered from sensor ID 1A353-53V-VH4G.\n \nPlease return home immediately. You can switch off the alarm from the app.</string>
    <string name="this_message_will_be_sent_out_to_all_registered_users_when_nthis_sensor_is_triggered_while_the_hub_is_armed">This message will be sent out to all registered users when \nthis sensor is triggered while the Hub is Armed.</string>
    <string name="custom_sms_message">Custom Sms Message</string>

</resources>