<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="hub"
            type="com.hbeonlabs.smartguard.data.local.models.Hub" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/img_edit_hub_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        />

    <TextView
        android:id="@+id/tv_edit_hub_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_edit_hub_image"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@{hub.hub_phone_number}"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tv_edit_registered_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_hub_number"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="Registerod On 02/205/2011"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tv_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_registered_on"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/name"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_16sdp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_name"
        android:hint="@string/hub_name_here"
        android:textSize="@dimen/_12ssp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:inputType="text" />

    <TextView
        android:id="@+id/btn_continue_to_add_sensors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/continue_to_add_sensors"
        android:layout_marginBottom="@dimen/_20sdp"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        android:textSize="@dimen/_14ssp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>
</layout>