<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_secondary_number"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_edit_hub_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.28"
        android:background="#E6E5E5"
        android:scaleType="fitXY"
        />
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="3dp"
        app:layout_constraintTop_toBottomOf="@id/img_edit_hub_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/btn_upload_from_camera"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:src="@drawable/ic_camera"
        app:layout_constraintTop_toTopOf="@id/img_edit_hub_image"
        app:layout_constraintStart_toStartOf="@id/img_edit_hub_image"
        app:layout_constraintBottom_toBottomOf="@id/img_edit_hub_image"
        app:layout_constraintEnd_toStartOf="@id/divider_btw"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Take a New Photo"
        app:layout_constraintTop_toBottomOf="@id/btn_upload_from_camera"
        app:layout_constraintStart_toStartOf="@id/btn_upload_from_camera"
        app:layout_constraintEnd_toEndOf="@id/btn_upload_from_camera"
        />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_btw"
        android:layout_width="3dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="@id/img_edit_hub_image"
        app:layout_constraintBottom_toBottomOf="@id/img_edit_hub_image"
        app:layout_constraintStart_toStartOf="@id/img_edit_hub_image"
        app:layout_constraintEnd_toEndOf="@id/img_edit_hub_image"/>
    <ImageView
        android:id="@+id/btn_upload_from_gallery"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:src="@drawable/ic_gallery"
        app:layout_constraintTop_toTopOf="@id/img_edit_hub_image"
        app:layout_constraintEnd_toEndOf="@id/img_edit_hub_image"
        app:layout_constraintBottom_toBottomOf="@id/img_edit_hub_image"
        app:layout_constraintStart_toEndOf="@id/divider_btw"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose an Existing Photo"
        app:layout_constraintTop_toBottomOf="@id/btn_upload_from_gallery"
        app:layout_constraintStart_toStartOf="@id/btn_upload_from_gallery"
        app:layout_constraintEnd_toEndOf="@id/btn_upload_from_gallery"
        />





    <TextView
        android:id="@+id/tv_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_edit_hub_image"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/name"
        android:textSize="@dimen/_12ssp"
        android:layout_marginStart="@dimen/_16sdp"
        />

    <EditText
        android:id="@+id/edt_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_name"
        android:hint="@string/hub_name_here"
        android:textSize="@dimen/_12ssp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_edit_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_user_name"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="Registered Phone No."
        android:textSize="@dimen/_12ssp"
        android:layout_marginStart="@dimen/_16sdp"
        />

    <EditText
        android:id="@+id/edt_user_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_number"
        android:hint="+91 xxxx xx xxxx"
        android:maxEms="10"
        android:textSize="@dimen/_12ssp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:inputType="number" />

    <TextView
        android:id="@+id/desc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edt_user_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/desc1_secandory_user"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <TextView
        android:id="@+id/desc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/desc1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/desc2_secandory_user"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <TextView
        android:id="@+id/btn_confirm_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/confirm_number"
        android:layout_marginBottom="@dimen/_20sdp"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/_14ssp"
        app:drawableEndCompat="@drawable/ic_navigate_next"
        app:drawableTint="@color/purple_700" />




</androidx.constraintlayout.widget.ConstraintLayout>
</layout>